Search API Solr search 1.x, dev (xx/xx/xxxx):
---------------------------------------------

Search API Solr search 1.2 (09/01/2013):
----------------------------------------
- #1246730 by febbraro, maciej.zgadzaj, drunken monkey: Added a way to alter
  the Solr document when indexing.
- #2053553 by drunken monkey, andrewbelcher: Fixed spatial features with clean
  field identifiers.
- #2054373 by drunken monkey: Added the option to use clean field identifiers.
- #1992806 by drunken monkey: Documented problems with Solr 4.3+.
- #2045355 by drunken monkey, arpieb: Fixed result mapping of item IDs.
- #2050157 by izus: Fixed typo in stopwords.txt.

Search API Solr search 1.1 (07/21/2013):
----------------------------------------
- #1957730 by drunken monkey: Fixed filter query strings for negated filters.
- #2010818 by kenorb, drunken monkey: Added new Files tab showing all used solr
  config files.
- #2042201 by klausi: Fixed timeouts while optimizing Solr server.
- #2034719 by fago: Added raw term to autocompletion response.
- #2027843 by fago, drunken monkey: Made the Solr response available as part of
  the search results.
- #1834614 by drunken monkey: Fixed date fields in MLT queries.
- #1970652 by jsteggink: Fixed highlighting for text fields.
- #2016169 by tomdearden, drunken monkey: Fixed parsing of facets on
  multi-valued fields.
- #2008034 by bdecarne: Fixed highlighting in multi-index searches.

Search API Solr search 1.0 (06/09/2013):
----------------------------------------
- #1896080 by drunken monkey: Included additional required config files in the
  module.
- #1919572 by chaby: Fixed indexing of geohashes.
- #2004596 by drunken monkey: Fixed "More Like This" for Solr 4.x.
- #2007214 by drunken monkey: Fixed unsetting of object properties.
- #1884312 by drunken monkey, mvc: Fixed resetting of HTTP password upon
  re-saving of the configuration form.
- #1957774 by drunken monkey: Fixed displayed link to local Solr servers.