@@ -11,9 +11,9 @@ files[] = includes/solr_connection.interface.inc
 files[] = includes/solr_field.inc
 files[] = includes/spellcheck.inc
 
-; Information added by drupal.org packaging script on 2013-09-01
-version = "7.x-1.2"
+; Information added by drupal.org packaging script on 2013-10-23
+version = "7.x-1.3"
 core = "7.x"
 project = "search_api_solr"
-datestamp = "1378026413"
+datestamp = "1382524827"
 
