@@ -1,6 +1,16 @@
 Search API Solr search 1.x, dev (xx/xx/xxxx):
 ---------------------------------------------
 
+Search API Solr search 1.3 (10/23/2013):
+----------------------------------------
+- #2099683 by drunken monkey: Added support for 'virtual fields' in Views.
+- #1997702 by ianthomas_uk, drunken monkey: Added "AUTO" mode for HTTP method.
+- #2033913 by drunken monkey: Fixed small error in schema.xml.
+- #2073441 by drunken monkey: Removed custom uninstall code for deleting
+  dependent servers.
+- #1882190 by corvus_ch, arnested, drunken monkey: Added optional index ID
+  prefixes.
+
 Search API Solr search 1.2 (09/01/2013):
 ----------------------------------------
 - #1246730 by febbraro, maciej.zgadzaj, drunken monkey: Added a way to alter
